linted DatasetUtils